# ampalgorithms

./: .gitignore  CMakeLists.txt  amp_algorithms.sln  amp_algorithms.vcxproj  amp_algorithms.vcxproj.filters  amp_algorithms110.sln  amp_algorithms120.sln  amp_algorithms_filters.proj  amp_algorithms_sources.proj  amp_scan.playlist  amp_stl_algorithms.vcxproj  amp_stl_algorithms.vcxproj.filters  amp_stl_algorithms_filters.proj  amp_stl_algorithms_sources.proj  pre_checkin_build.ps1  readme.txt  testtools.playlist
inc/: amp_algorithms.h  amp_algorithms_atomic.h  amp_algorithms_direct3d.h  amp_algorithms_execution_parameters.h  amp_algorithms_pair.h  amp_algorithms_programming_model.h  amp_algorithms_tuple.h  amp_algorithms_type_functions_helpers.h  amp_indexable_view.h  amp_iterators.h  amp_scan.h  amp_stl_algorithms.h  native_simd_width.h  xx_amp_algorithms_direct3d_impl.h  xx_amp_algorithms_impl.h  xx_amp_algorithms_impl_inl.h  xx_amp_stl_algorithms_impl.h  xx_amp_stl_algorithms_impl_inl.h
native_SIMD_width_deducer/native_SIMD_width_deducer/: main.cpp  native_SIMD_width_deducer.vcxproj  native_SIMD_width_deducer.vcxproj.filters
test/: CMakeLists.txt  driver.cpp  examples_stl_amp_algorithms.cpp  gtest_main.cpp  stdafx.cpp  stdafx.h  test_amp.cpp  test_amp.h  test_amp_algorithms.cpp  test_amp_algorithms_bitvector.cpp  test_amp_algorithms_direct3d_scan.cpp  test_amp_algorithms_operators.cpp  test_amp_algorithms_radix_sort.cpp  test_amp_algorithms_reduce.cpp  test_amp_algorithms_scan.cpp  test_amp_algorithms_sort.cpp  test_amp_scan.cpp  test_amp_stl_algorithms.cpp  test_amp_stl_algorithms_all_of.cpp  test_amp_stl_algorithms_any_of.cpp  test_amp_stl_algorithms_binary_search.cpp  test_amp_stl_algorithms_copy.cpp  test_amp_stl_algorithms_count.cpp  test_amp_stl_algorithms_count_if.cpp  test_amp_stl_algorithms_equal.cpp  test_amp_stl_algorithms_equal_range.cpp  test_amp_stl_algorithms_fill.cpp  test_amp_stl_algorithms_find.cpp  test_amp_stl_algorithms_is_sorted.cpp  test_amp_stl_algorithms_max_element.cpp  test_amp_stl_algorithms_merge.cpp  test_amp_stl_algorithms_min_element.cpp  test_amp_stl_algorithms_minmax_element.cpp  test_amp_stl_algorithms_none_of.cpp  test_amp_stl_algorithms_nth_element.cpp  test_amp_stl_algorithms_pair.cpp  test_amp_stl_algorithms_partial_sum.cpp  test_amp_stl_algorithms_partition.cpp  test_amp_stl_algorithms_reduce.cpp  test_amp_stl_algorithms_remove.cpp  (+10 more)
vs110/: amp_algorithms.vcxproj  amp_algorithms.vcxproj.filters  amp_stl_algorithms.vcxproj  amp_stl_algorithms.vcxproj.filters
vs120/: amp_algorithms.vcxproj  amp_algorithms.vcxproj.filters  amp_stl_algorithms.vcxproj  amp_stl_algorithms.vcxproj.filters
